<resources xmlns:andriod="http://schemas.android.com/apk/res-auto">
    <string name="app_name">ExamenPrueba</string>



    <string name="hello_world">Hello world!</string>
    <string name="configuracion">configuracion</string>
    <string name="reportes">reporte</string>
    <string name="cliente">cliente</string>
    <string name="producto">producto</string>
    <string name="categoria">categoria</string>
    <string name="vendedor">vendedor</string>
    <string name="repProducto">repProducto</string>
    <string name="repVenta">repVenta</string>
    <string name="title_activity_img1">img1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_img2">img2</string>
    <string name="title_activity_img3">img3</string>
    <string name="title_activity_img4">img4</string>
    <string name="title_activity_img5">img5</string>
    <string name="title_activity_img6">img6</string>
    <string name="title_activity_listrow">listrow</string>

</resources>
