<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/configuracion"
       android:title="@string/configuracion"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_manage">
        <menu>
            <item
                android:id="@+id/cliente"
                android:title="@string/cliente"
                app:showAsAction="never"/>

            <item
                android:id="@+id/producto"
                android:title="@string/producto"
                app:showAsAction="never"/>
            <item
                android:id="@+id/categoria"
                android:title="@string/categoria"
                app:showAsAction="never"/>

            <item
                android:id="@+id/vendedor"
                android:title="@string/vendedor"
                app:showAsAction="never"/>

       </menu>

        </item>

    <item android:id="@+id/reportes"
        android:title="@string/reportes"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_agenda">
      <menu>
        <item
            android:id="@+id/repProducto"
            android:title="@string/repProducto"
            app:showAsAction="never"/>
        <item
            android:id="@+id/repVenta"
            android:title="@string/repVenta"
            app:showAsAction="never"/>

      </menu>

        </item>
</menu>
